# Sudoku-SFML

./: .gitignore  CMakeLists.txt  readme.md  run.sh
sources/: Animation.cpp  Animation.h  Board.cpp  Board.h  Button.cpp  Button.h  CMakeLists.txt  Collider.cpp  Collider.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Selection.cpp  Selection.h  Square.cpp  Square.h  main.cpp
